# Dyn_Lib_New_CMake

./: CMakeLists.txt
DynLib/: Header.h
